# order-view

./: .gitignore  Cargo.toml  README.md  Rocket.toml
migrations/2024-07-03-162716_create_customers_table/: down.sql  up.sql
migrations/2024-07-03-163016_create_orders_table/: down.sql  up.sql
migrations/2024-07-03-163023_create_order_items_table/: down.sql  up.sql
migrations/2024-07-03-163029_create_products_table/: up.sql
migrations/2024-07-03-163049_create_customer_order_summary_view/: down.sql  up.sql
migrations/2024-07-03-164127_create_dummy_inserts/: up.sql
src/: main.rs  models.rs  schema.rs  views.rs
